--- a/src/components/settemparatureapp/Temparature.css
+++ b/src/components/settemparatureapp/Temparature.css
@@ -1,80 +1,56 @@
 
-
-
-body {
-   
-    font-family: sans-serif;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    min-height: 100vh;
-  }
-
 .container{
-   
+    margin: 100px auto;
+    background-color: rgb(59, 110, 117);
     height: 400px;
     width: 300px;
-    background: #2b5870;
-    border-radius: 20px;
-    box-shadow: 10px 10px 38px 0px rgba(0, 0, 0, 0.75);
-}
-.temparaturedisplaycontainer{
-      display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 70%;
+    border-radius: 5px;
+    box-shadow: 1px 3px 7px black;
 }
 
 .temp{
-    
     display: flex;
-  border-radius: 50%;
-  color: #ffffff;
-  height: 220px;
-  width: 220px;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  font-size: 48px;
-  border: 3px #ffffff solid;
-  transition: background 0.7s;
+    justify-content: center;
+    flex-direction: column;
+    position: relative;
+    top:30px;
+    margin: 70px auto;
+    font-size: 3rem;
+    color: white;
+    border:5px solid white;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
 
 }
+
 .cold{
-    background-color: blue;
+    background-color: rgb(62, 135, 177);
+}
 
-}
 .hot{
-    background-color: red;
+    background-color: rgb(179, 26, 110);
 }
+
 
 .buttonwraper{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 30px;
 }
-
 .button1{
-    border-radius: 100px;
-  height: 80px;
-  width: 80px;
-  font-size: 32px;
-  color: #ffffff;
-  background: rgb(105, 104, 104);
-  border: 2px #ffffff solid;
+    background-color: slateblue;
+    border-radius: 50%;
+    padding: 30px;
+    font-size: 30px;
+    border:3px solid white;
+    
 }
 .button2{
-    border-radius: 100px;
-    height: 80px;
-    width: 80px;
-    font-size: 32px;
-    color: #ffffff;
-    background: rgb(105, 104, 104);
-    border: 2px #ffffff solid;
-}
-button:hover{
-    background-color: rgb(105, 21, 131);
+    background-color: slateblue;
+    border-radius: 50%;
+    font-size: 30px;
+    padding: 30px;
+    border:3px solid white;
+    
 }
